updated docs and python notebook

--- a/statistical-study/Statistical Study of The Data for Arima Application.ipynb
+++ b/statistical-study/Statistical Study of The Data for Arima Application.ipynb
@@ -44098,7 +44098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4rc1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
